1998-11-22 Sam Maloney <thufir@illogic.ml.org>

	* Tweeked docking, to compensate for a (qt bug?). Made it so it
	  won't pause for 1 second, when quiting, or using the dock widget
	  to toggle state. Made it so KMix exits when it is sent a
	  closeEvent, instead of docking. 

 1998-11-16  Alex Zepeda  <garbanzo@hooked.net>

	* kmix.cpp (createMenu): &Options -> &Options... (afterall it does
	pop up a dialog box)

1998-11-09  Christian Esken  <esken@kde.org>

	* kmix1.0
	* Set support added: Sets can be stored by pressing CTRL-1,
	CTRL-2, ... and rstored by pressing 1, 2, ...
	* Command line parameters: "-devnum" to set the mixer device
	number and "-r" to read set 1 and "-R num" to read set 'num'
	on startup.
	* Session management. Mixer restarts with the same device
	and set number, as specified in the command line.

1998-7-1    Nick Lopez <kimo_sabe@usa.net>
        * ALSA support added. Known limitations:
	  - If another program changes a mixer setting it will not
	    automagicaly update. yet.
          - I'm unsure if they channel icons will be correct for cards
            other than my SB16. If you have a different card tell me
            if the icons match the tooltips.

1998-06-17  Christian Esken  <esken@kde.org>

	* Can now start docked.

1998-05-20    <esken@kde.org>

	* Set support is basically in. No user visible aspects, though.
	* User can now switch visualization of channels on and off.
	* Options saving now works via Quit as well as via SM.
	* This revision is a major step towards kmix1.0, so I warped
	the version number to 0.80

1998-05-19    <chris@magicon.ping.de>

	* Implementing major aspects of set support. Nothing
	is visible for the user at the point.

Mon May  4 00:07:55 1998    <chris@magicon.ping.de>

	* Added layout setup in config dialog. It works but isn't saved yet.

Fri May  1 19:35:39 1998    <chris@magicon.ping.de>

	* Show dock icon directly (even if undocked)
	* Add "Quit" option in docked window popup menu