@@ -1,49 +1,45 @@
 /* XPM */
-/* Drawn  by Stephan Kanthak for the K Desktop Environment */
-/* See http://www.kde.org */
-static char*kmix[]={
-"32 32 11 1",
-"a c #ffffff",
-"# c #000000",
-"b c #c0c0c0",
-"c c #808080",
-"d c #a0a0a4",
-"e c #585858",
-"f c #808080",
-"g c #303030",
-"h c #ffffc0",
-"i c #00c0c0",
-". c None",
-"................................",
-".............##.................",
-"..........###ab##...............",
-".........#aabcbbc##.............",
-".......##cbbadecaab##...........",
-".....##aabeeddecbbade##.........",
-"...##aabbbcaeebbeeddebb##.......",
-".##aabbbcaabbbdcaaeebbbbb##.....",
-"#aabbbcaabbbdcccbbbbcccbbbb##...",
-"#baabbbbbbdccaabcdccaabcdcbbb##.",
-"#bbbaabbbcaacbbadeacbbadeaabbbd#",
-"#bbbbbaabbbbbeeddebbeeddebbbcdc#",
-"#bbbbbbbaabbbcaeebdcaaeebbdcdcd#",
-"#bbbbbbbbbaabbbbdcaabbbbcdcdcdc#",
-".##bbbbbbbffaabbbbbbbbdcdcdcdcd#",
-"...##bbbbfbgfbaabbbbhdcdcdcdcdc#",
-".....##bfigbafbbaadchcdchfdcd##.",
-".......#b#bbafbbbbfhhhcdhdc##...",
-"......#bigbaafbbhbhhfhhhhh#.....",
-"....##biigbaafhbhhhhfhhhfh#.....",
-"...#bbiiiggaafhhhhfhehfhfhh#....",
-"...#ibiiigbghheheheheheheheh##..",
-"...#ibiiigfghehehehehehehehehh##",
-"...gffiiiggaahhfhfhehfhehfhh##..",
-"....ggfiigbaa##hhfhehfhehhh#....",
-"......gfigbaa#.##hhfhhhfhh#.....",
-".......gfgbba#...#hfhhhfh#......",
-"........gfgba#....#h##hh#.......",
-".........gfg#......#..#h#.......",
-"..........gg.......#...#........",
-".......................#........",
-"................................"};
-
+static char * kmix_xpm[] = {
+"32 32 10 1",
+" 	c None",
+".	c #000000",
+"+	c #FFFFFF",
+"@	c #C0C0C0",
+"#	c #808080",
+"$	c #A0A0A4",
+"%	c #585858",
+"&	c #303030",
+"*	c #FFFFC0",
+"=	c #00C0C0",
+"                                ",
+"             ..                 ",
+"          ...+@..               ",
+"         .++@#@@#..             ",
+"       ..#@@+$%#++@..           ",
+"     ..++@%%$$%#@@+$%..         ",
+"   ..++@@@#+%%@@%%$$%@@..       ",
+" ..++@@@#++@@@$#++%%@@@@@..     ",
+".++@@@#++@@@$###@@@@###@@@@..   ",
+".@++@@@@@@$##++@#$##++@#$#@@@.. ",
+".@@@++@@@#++#@@+$%+#@@+$%++@@@$.",
+".@@@@@++@@@@@%%$$%@@%%$$%@@@#$#.",
+".@@@@@@@++@@@#+%%@$#++%%@@$#$#$.",
+".@@@@@@@@@++@@@@$#++@@@@#$#$#$#.",
+" ..@@@@@@@##++@@@@@@@@$#$#$#$#$.",
+"   ..@@@@#@&#@++@@@@*$#$#$#$#$#.",
+"     ..@#=&@+#@@++$#*#$#*#$#$.. ",
+"       .@.@@+#@@@@#***#$*$#..   ",
+"      .@=&@++#@@*@**#*****.     ",
+"    ..@==&@++#*@****#***#*.     ",
+"   .@@===&&++#****#*%*#*#**.    ",
+"   .=@===&@&**%*%*%*%*%*%*%*..  ",
+"   .=@===&#&*%*%*%*%*%*%*%*%**..",
+"   &##===&&++**#*#*%*#*%*#**..  ",
+"    &&#==&@++..**#*%*#*%***.    ",
+"      &#=&@++. ..**#***#**.     ",
+"       &#&@@+.   .*#***#*.      ",
+"        &#&@+.    .*..**.       ",
+"         &#&.      .  .*.       ",
+"          &&       .   .        ",
+"                       .        ",
+"                                "};
